# paris-fp

./: .gitignore  INSTALL_FR.md  INSTALL_US.md  LICENSE  README.md  petit  petit.cabal  shell  stack.yaml  watch
exec/: Main.hs
src/: Codegen.hs  Compiler.hs  Driver.hs  Entry.hs  Infer.hs  JIT.hs  Lexer.hs  Parser.hs  Pretty.hs  Syntax.hs  Transform.hs  Types.hs
