name:                petit
version:             0.1.0.0
synopsis:            Paris Functional Programming Meetup
description:         Petit compiler
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010

  hs-source-dirs:      src

  exposed-modules:

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    GeneralizedNewtypeDeriving
    LambdaCase

  build-depends:       
    base              >=4.8     && <4.9,
    protolude         == 0.1.8,
    text              >= 1.2    && <1.3,
    containers        >= 0.5    && <0.6,
    transformers      >= 0.4    && <0.6,
    mtl               >= 2.1    && <2.3,
    repline           >= 0.1.4  && <0.1.5,
    z3                >= 4.1    && <4.2,
    haskeline         >= 0.7    && <0.8,
    parsec            >= 3.1    && <3.2,
    llvm-general-pure >= 3.5    && <3.6,
    llvm-general      >= 3.5    && <3.6,
    pretty-show       >= 1.6    && <1.7

executable petit
  default-language:    Haskell2010
  hs-source-dirs:      exec
  main-is:             Main.hs

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  build-depends:       
    base              >=4.8     && <4.9,
    protolude         == 0.1.8,
    petit             -any
